--- a/backend/reconcile/Cargo.toml
+++ b/backend/reconcile/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 ropey = { version = "1.6.1", default-features = false, features = ["simd"]  } #
 thiserror = {workspace = true}
 log = {workspace = true}
+itertools = "0.13.0"
+
+# optional dependencies
 serde = { version = "1.0.215", optional = true }
 
 [features]
@@ -14,5 +17,4 @@ serde = [ "dep:serde" ]
 
 [dev-dependencies]
 insta = "1.41.1"
-itertools = "0.13.0"
 pretty_assertions = "1.4.1"
