--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,8 @@ node_modules
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
 
+# Rust build folder
 backend/target
+
+# Obsidian plugin build folder
+plugin/build
