--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -21,3 +21,4 @@ sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid", "chro
 chrono = { version = "0.4.38", features = ["serde"] }
 aide = { version = "0.13.4", features = ["axum", "axum-ws", "scalar"] }
 schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
+rand = "0.8.5"
