--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -19,6 +19,7 @@ tracing-subscriber = "0.3.19"
 serde_yaml = "0.9.34"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
 chrono = { version = "0.4.38", features = ["serde"] }
-aide = { version = "0.13.4", features = ["axum", "axum-ws", "scalar"] }
+aide = { version = "0.13.4", features = ["axum", "axum-ws", "scalar", "axum-headers"] }
 schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
 rand = "0.8.5"
+axum-extra = { version = "0.9.6", features = ["typed-header"] }
