--- a/plugin/package.json
+++ b/plugin/package.json
@@ -17,9 +17,12 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
-		"obsidian": "latest",
+		"obsidian": "1.7.2",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4",
-		"esbuild-plugin-wasm-pack": "^1.1.0"
+		"typescript": "5.7.2",
+		"esbuild-plugin-wasm-pack": "^1.1.0",
+		"eslint": "8.1.0",
+		"openapi-fetch": "0.13.3",
+		"openapi-typescript": "7.4.4"
 	}
 }
