--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -23,3 +23,4 @@ aide = { version = "0.13.4", features = ["axum", "axum-ws", "scalar", "axum-head
 schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
 rand = "0.8.5"
 axum-extra = { version = "0.9.6", features = ["typed-header"] }
+tower-http = { version = "0.6.1", features = ["cors"] }
