--- a/plugin/package.json
+++ b/plugin/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"lint": "eslint --fix src",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
@@ -13,16 +14,17 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "8.18.0",
+		"@typescript-eslint/parser": "8.18.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "1.7.2",
-		"tslib": "2.4.0",
-		"typescript": "5.7.2",
+		"esbuild": "0.24.0",
 		"esbuild-plugin-wasm-pack": "^1.1.0",
-		"eslint": "8.1.0",
+		"eslint": "9.17.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"obsidian": "1.7.2",
 		"openapi-fetch": "0.13.3",
-		"openapi-typescript": "7.4.4"
+		"openapi-typescript": "7.4.4",
+		"tslib": "2.4.0",
+		"typescript": "5.7.2"
 	}
 }
