--- a/plugin/package.json
+++ b/plugin/package.json
@@ -25,6 +25,7 @@
 		"openapi-fetch": "0.13.3",
 		"openapi-typescript": "7.4.4",
 		"tslib": "2.4.0",
-		"typescript": "5.7.2"
+		"typescript": "5.7.2",
+		"p-queue": "^8.0.1"
 	}
 }
