--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,9 +7,21 @@ members = [
     "sync_lib"
 ]
 
+[workspace.lints.clippy]
+single_call_fn = "allow"
+missing_docs_in_private_items = "allow"
+question_mark_used = "allow"
+implicit_return = "allow"
+
+
 [workspace.dependencies]  
 serde = { version = "1.0.214", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.66", default-features = false  } 
 uuid = { version = "1.11.0", default-features = false, features = ["v4", "serde"] }
 log = { version = "0.4.22",  default-features = false }
 anyhow =  { version = "1.0.94", features = ["backtrace"] }
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = 3
