Fix sqlx in docker build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,15 @@
-FROM rust:1.83 as builder
+FROM rust:1.83 AS builder
 
 WORKDIR /usr/src/backend
 
 RUN apt update && apt install -y musl-tools
 RUN rustup target add x86_64-unknown-linux-musl
+RUN cargo install sqlx-cli
 
 COPY . .
+
+RUN sqlx database create --database-url sqlite://db.sqlite3
+RUN sqlx migrate run --source sync_server/src/database/migrations --database-url sqlite://db.sqlite3
 
 RUN cargo build --package sync_server --release --target x86_64-unknown-linux-musl
 
