--- a/.github/workflows/release-plugin.yml
+++ b/.github/workflows/release-plugin.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build plugin
         run: |
-          cd ../plugin
+          cd plugin
           npm install
           npm run build
 
