--- a/.github/workflows/release-plugin.yml
+++ b/.github/workflows/release-plugin.yml
@@ -1,10 +1,14 @@
 name: Release Obsidian plugin
 
+# on:
+#   push:
+#     tags:
+#       - "*"
 on:
   push:
-    tags:
-      - "*"
-
+    branches: ["master"]
+  pull_request:
+    branches: ["master"]
 env:
   CARGO_TERM_COLOR: always
 
