--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           rustup install nightly
           rustup default nightly
+          rustup component add clippy
           cargo install sqlx-cli
           cd backend
           sqlx database create --database-url sqlite://db.sqlite3
