--- a/.github/workflows/release-plugin.yml
+++ b/.github/workflows/release-plugin.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           tag="${GITHUB_REF#refs/tags/}"
 
-          cd plugin
+          cd plugin/build
 
           gh release create "$tag" \
             --title="$tag" \
