--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ backend/target
 # Obsidian plugin build folder
 plugin/build
 
-backend/db.sqlite3
+backend/db.sqlite3*
 backend/config.yaml
+
+*.log
