--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -1,8 +1,8 @@
 {
 	"id": "sample-plugin",
 	"name": "Sync & Share",
-	"version": "0.0.1-rc1",
-	"minAppVersion": "0.15.0",
+	"version": "0.0.1",
+	"minAppVersion": "0.0.0",
 	"description": "Demonstrates some of the capabilities of the Obsidian API.",
 	"author": "Obsidian",
 	"authorUrl": "https://obsidian.md",
