--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,9 @@ members = [
     "sync_lib"
 ]
 
+[workspace.package]
+rust-version = "1.83"
+
 [workspace.dependencies]  
 serde = { version = "1.0.214", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.66", default-features = false  } 
@@ -19,4 +22,36 @@ codegen-units = 1
 lto = true
 opt-level = 3
 
+[workspace.lints.rust]
+unsafe_code = "forbid"
+rust_2018_idioms = { level = "warn", priority = -1 }
+missing_debug_implementations = "warn"
+
 [workspace.lints.clippy]
+await_holding_lock = "warn"
+dbg_macro = "warn"
+empty_enum = "warn"
+enum_glob_use = "warn"
+exit = "warn"
+filter_map_next = "warn"
+fn_params_excessive_bools = "warn"
+if_let_mutex = "warn"
+imprecise_flops = "warn"
+inefficient_to_string = "warn"
+linkedlist = "warn"
+lossy_float_literal = "warn"
+macro_use_imports = "warn"
+match_on_vec_items = "warn"
+match_wildcard_for_single_variants = "warn"
+mem_forget = "warn"
+needless_borrow = "warn"
+needless_continue = "warn"
+option_option = "warn"
+rest_pat_in_fully_bound_structs = "warn"
+str_to_string = "warn"
+suboptimal_flops = "warn"
+todo = "warn"
+uninlined_format_args = "warn"
+unnested_or_patterns = "warn"
+unused_self = "warn"
+verbose_file_reads = "warn"
