--- a/plugin/package.json
+++ b/plugin/package.json
@@ -14,8 +14,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "8.18.0",
-		"@typescript-eslint/parser": "8.18.0",
+		"typescript-eslint": "8.18.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.24.0",
 		"esbuild-plugin-wasm-pack": "^1.1.0",
