--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -7,23 +7,24 @@ edition = "2021"
 reconcile = { path = "../reconcile" }
 sync_lib = { path = "../sync_lib" }
 
-serde = {workspace = true}
-thiserror = {workspace = true}
-anyhow = {workspace = true}
-log = {workspace = true}
-uuid = {workspace = true}
+serde = { workspace = true }
+thiserror = { workspace = true }
 
-axum = { version = "0.7.9", features = ["ws", "macros"]}
 tokio = { version = "1.42.0", features = ["full"]}
-tracing-subscriber = "0.3.19"
+uuid = { version = "1.11.0", features = ["v4", "serde"] }
+log = { version = "0.4.22" }
+anyhow =  { version = "1.0.94", features = ["backtrace"] }
+axum = { version = "0.7.9", features = ["ws", "macros", "tracing"]}
+axum-extra = { version = "0.9.6", features = ["typed-header"] }
+tower-http = { version = "0.6.1", features = ["cors", "trace"] }
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"]}
 serde_yaml = "0.9.34"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 aide = { version = "0.13.4", features = ["axum", "axum-ws", "scalar", "axum-headers"] }
 schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
+tracing = "0.1"
 rand = "0.8.5"
-axum-extra = { version = "0.9.6", features = ["typed-header"] }
-tower-http = { version = "0.6.1", features = ["cors"] }
 
 [lints]
 workspace = true
