--- a/plugin/package.json
+++ b/plugin/package.json
@@ -14,8 +14,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"typescript-eslint": "8.18.0",
 		"builtin-modules": "3.3.0",
+		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.13",
 		"esbuild": "0.24.0",
 		"esbuild-plugin-wasm-pack": "^1.1.0",
 		"eslint": "9.17.0",
@@ -23,8 +24,10 @@
 		"obsidian": "1.7.2",
 		"openapi-fetch": "0.13.3",
 		"openapi-typescript": "7.4.4",
+		"p-queue": "^8.0.1",
 		"tslib": "2.4.0",
 		"typescript": "5.7.2",
-		"p-queue": "^8.0.1"
+		"typescript-eslint": "8.18.0",
+		"esbuild-sass-plugin": "^3.3.1"
 	}
 }
