--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,13 +27,19 @@ jobs:
           sqlx database create --database-url sqlite://db.sqlite3
           sqlx migrate run --source sync_server/src/database/migrations --database-url sqlite://db.sqlite3
 
-      - name: Lint
+      - name: Lint backend
         run: |
           cd backend
           cargo clippy --all-targets --all-features
           cargo fmt --all -- --check
 
-      - name: Test
+      - name: Test backend
         run: |
           cd backend
           cargo test --verbose
+
+      - name: Lint frontend
+        run: |
+          cd plugin
+          npm install
+          npm run lint
