--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -1,14 +1,10 @@
 name: Release Obsidian plugin
 
-# on:
-#   push:
-#     tags:
-#       - "*"
 on:
   push:
-    branches: ["master"]
-  pull_request:
-    branches: ["master"]
+    tags:
+      - "*"
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -32,9 +28,7 @@ jobs:
 
       - name: Build plugin
         run: |
-          pwd
           cd plugin
-          pwd
           npm install
           npm run build
 
