--- a/plugin/package.json
+++ b/plugin/package.json
@@ -19,6 +19,7 @@
 		"dayjs": "^1.11.13",
 		"esbuild": "0.24.0",
 		"esbuild-plugin-wasm-pack": "^1.1.0",
+		"esbuild-sass-plugin": "^3.3.1",
 		"eslint": "9.17.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"obsidian": "1.7.2",
@@ -28,6 +29,6 @@
 		"tslib": "2.4.0",
 		"typescript": "5.7.2",
 		"typescript-eslint": "8.18.0",
-		"esbuild-sass-plugin": "^3.3.1"
+		"fetch-retry": "^6.0.0"
 	}
 }
