--- a/plugin/package.json
+++ b/plugin/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "jest",
 		"lint": "eslint --fix src",
 		"version": "node version-bump.mjs"
 	},
@@ -13,6 +14,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^29.5.14",
 		"@types/node": "^16.11.6",
 		"builtin-modules": "3.3.0",
 		"date-fns": "^4.1.0",
@@ -22,13 +24,15 @@
 		"esbuild-sass-plugin": "^3.3.1",
 		"eslint": "9.17.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
+		"fetch-retry": "^6.0.0",
+		"jest": "^29.7.0",
 		"obsidian": "1.7.2",
 		"openapi-fetch": "0.13.3",
 		"openapi-typescript": "7.4.4",
 		"p-queue": "^8.0.1",
+		"ts-jest": "^29.2.5",
 		"tslib": "2.4.0",
 		"typescript": "5.7.2",
-		"typescript-eslint": "8.18.0",
-		"fetch-retry": "^6.0.0"
+		"typescript-eslint": "8.18.0"
 	}
 }
