--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Setup
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y 
+          . "$HOME/.cargo/env"
+
           rustup install nightly
           rustup default nightly
           rustup component add clippy rustfmt
