--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Build wasm
         run: |
+          whoami
+          . "$HOME/.cargo/env"
           cd backend
           cargo install wasm-pack
           wasm-pack build --target web sync_lib
