--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -7,8 +7,7 @@ name: Publish server Docker image
 
 on:
   push:
-    tags:
-      - "*"
+    branches: ["master"]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -17,8 +16,9 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-docker:
+    runs-on: self-hosted
+
     permissions:
       contents: read
       packages: write
