--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "vault-link-obsidian-plugin",
 	"version": "0.0.12",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
