--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -7,7 +7,8 @@ name: Publish server Docker image
 
 on:
   push:
-    branches: ["master"]
+    tags:
+      - "*"
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -17,8 +18,7 @@ env:
 
 jobs:
   build-docker:
-    runs-on: self-hosted
-
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
