--- a/plugin/package.json
+++ b/plugin/package.json
@@ -4,19 +4,27 @@
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"dev": "webpack watch --mode development",
+		"build": "webpack --mode production",
 		"test": "jest",
-		"lint": "eslint --fix src",
+		"lint": "eslint --fix src && prettier --write \"src/**/*.(ts|scss|json|html)\"",
 		"version": "node version-bump.mjs"
 	},
 	"keywords": [],
 	"author": "",
+	"type": "commonjs",
 	"license": "MIT",
+	"prettier": {
+		"trailingComma": "none",
+		"tabWidth": 2,
+		"useTabs": false,
+		"endOfLine": "lf"
+	},
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
 		"@types/node": "^16.11.6",
 		"builtin-modules": "3.3.0",
+		"css-loader": "^7.1.2",
 		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
 		"esbuild": "0.24.0",
@@ -25,14 +33,25 @@
 		"eslint": "9.17.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"fetch-retry": "^6.0.0",
+		"file-loader": "^6.2.0",
+		"fs-extra": "^11.2.0",
 		"jest": "^29.7.0",
+		"mini-css-extract-plugin": "^2.9.2",
 		"obsidian": "1.7.2",
 		"openapi-fetch": "0.13.3",
 		"openapi-typescript": "7.4.4",
 		"p-queue": "^8.0.1",
+		"prettier": "^3.4.2",
+		"resolve-url-loader": "^5.0.0",
+		"sass-loader": "^16.0.4",
+		"sync_lib": "file:../backend/sync_lib/pkg",
+		"terser-webpack-plugin": "^5.3.11",
 		"ts-jest": "^29.2.5",
+		"ts-loader": "^9.5.1",
 		"tslib": "2.4.0",
 		"typescript": "5.7.2",
-		"typescript-eslint": "8.18.0"
+		"typescript-eslint": "8.18.0",
+		"webpack": "^5.97.1",
+		"webpack-cli": "^6.0.1"
 	}
 }
