--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,7 +44,7 @@ jobs:
           cd backend
           cargo test --verbose
           cd sync_lib
-          wasm-pack test --firefox --headless
+          wasm-pack test --node
 
       - name: Lint frontend
         run: |
