--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -49,9 +49,9 @@ jobs:
       - name: Lint frontend
         run: |
           cd plugin
-          npm install
+          npm ci
           npm run lint
-          if [[ -n $(git status --porcelain) ]]; then
+          if [[ $(git status --porcelain) ]]; then
               git status --porcelain
               echo "Failing CI because the working directory is not clean after linting."
               exit 1
@@ -60,5 +60,5 @@ jobs:
       - name: Test frontend
         run: |
           cd plugin
-          npm install
+          npm ci
           npm run test
