--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,11 @@ members = [
 
 [workspace.package]
 rust-version = "1.83"
+authors = ["Andras Schmelczer <andras@schmelczer.dev>"]
+edition = "2022"
+license = "MIT"
+repository = "https://github.com/schmelczer/vault-link"
+version = "0.0.20"
 
 [workspace.dependencies]  
 serde = { version = "1.0.214", default-features = false, features = ["derive"] }
