--- a/backend/fuzz/Cargo.toml
+++ b/backend/fuzz/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "reconcile-fuzz"
-version = "0.0.20"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
 publish = false
-edition = "2021"
 
 [package.metadata]
 cargo-fuzz = true
