--- a/backend/reconcile/Cargo.toml
+++ b/backend/reconcile/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "reconcile"
-version = "0.0.20"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 serde = { version = "1.0.215", optional = true }
