--- a/backend/sync_lib/Cargo.toml
+++ b/backend/sync_lib/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "sync_lib"
-version = "0.0.20"
-authors = ["Andras Schmelczer <andras@schmelczer.dev>"]
-edition = "2018"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [lib]
 crate-type = ["cdylib", "rlib"]
