--- a/plugin/package.json
+++ b/plugin/package.json
@@ -35,7 +35,7 @@
 		"fetch-retry": "^6.0.0",
 		"file-loader": "^6.2.0",
 		"fs-extra": "^11.2.0",
-		"hyperlist": "^1.0.0",
+		"virtual-scroller": "^1.13.1",
 		"jest": "^29.7.0",
 		"mini-css-extract-plugin": "^2.9.2",
 		"obsidian": "1.7.2",
