--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -6,52 +6,31 @@
 	"scripts": {
 		"dev": "webpack watch --mode development",
 		"build": "webpack --mode production",
-		"test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest",
-		"lint": "eslint --fix src && prettier --write \"src/**/*.(ts|scss|json|html)\"",
+		"test": "jest --passWithNoTests",
 		"version": "node version-bump.mjs"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
-	"prettier": {
-		"trailingComma": "none",
-		"tabWidth": 4,
-		"useTabs": true,
-		"endOfLine": "lf"
-	},
 	"devDependencies": {
+		"sync-client": "file:../sync-client",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^16.11.6",
-		"builtin-modules": "3.3.0",
-		"byte-base64": "^1.1.0",
 		"css-loader": "^7.1.2",
 		"date-fns": "^4.1.0",
-		"dayjs": "^1.11.13",
-		"esbuild": "0.24.0",
-		"esbuild-plugin-wasm-pack": "^1.1.0",
-		"esbuild-sass-plugin": "^3.3.1",
-		"eslint": "9.17.0",
-		"eslint-plugin-unused-imports": "^4.1.4",
-		"fetch-retry": "^6.0.0",
 		"file-loader": "^6.2.0",
 		"fs-extra": "^11.2.0",
 		"virtual-scroller": "^1.13.1",
 		"jest": "^29.7.0",
 		"mini-css-extract-plugin": "^2.9.2",
 		"obsidian": "1.7.2",
-		"openapi-fetch": "0.13.3",
-		"openapi-typescript": "7.4.4",
-		"p-queue": "^8.0.1",
-		"prettier": "^3.4.2",
 		"resolve-url-loader": "^5.0.0",
 		"sass-loader": "^16.0.4",
-		"sync_lib": "file:../backend/sync_lib/pkg",
 		"terser-webpack-plugin": "^5.3.11",
 		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.1",
 		"tslib": "2.4.0",
 		"typescript": "5.7.2",
-		"typescript-eslint": "8.18.0",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1"
 	}
