--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -13,25 +13,26 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"sync-client": "file:../sync-client",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^16.11.6",
+		"@types/node": "^22.13.4",
 		"css-loader": "^7.1.2",
 		"date-fns": "^4.1.0",
 		"file-loader": "^6.2.0",
-		"fs-extra": "^11.2.0",
-		"virtual-scroller": "^1.13.1",
+		"fs-extra": "^11.3.0",
 		"jest": "^29.7.0",
 		"mini-css-extract-plugin": "^2.9.2",
-		"obsidian": "1.7.2",
+		"obsidian": "1.8.7",
 		"resolve-url-loader": "^5.0.0",
-		"sass-loader": "^16.0.4",
+		"sass": "^1.85.0",
+		"sass-loader": "^16.0.5",
+		"sync-client": "file:../sync-client",
 		"terser-webpack-plugin": "^5.3.11",
 		"ts-jest": "^29.2.5",
-		"ts-loader": "^9.5.1",
-		"tslib": "2.4.0",
-		"typescript": "5.7.2",
-		"webpack": "^5.97.1",
+		"ts-loader": "^9.5.2",
+		"tslib": "2.8.1",
+		"typescript": "5.7.3",
+		"virtual-scroller": "^1.13.1",
+		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1"
 	}
 }
