--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
         "build": "npm run build --workspaces",
         "dev": "npm run dev --workspaces",
         "test": "npm run test --workspaces",
-        "lint": "eslint --fix sync-client obsidian-plugin; prettier --write \"sync-client/**/*.(ts|scss|json|html)\" \"obsidian-plugin/**/*.(ts|scss|json|html)\"",
+        "lint": "rm -rf **/dist/index.js && eslint --fix sync-client obsidian-plugin; prettier --write \"sync-client/**/*.(ts|scss|json|html)\" \"obsidian-plugin/**/*.(ts|scss|json|html)\"",
         "update": "ncu -u -ws"
     },
     "devDependencies": {
