--- a/frontend/sync-client/tsconfig.json
+++ b/frontend/sync-client/tsconfig.json
@@ -7,9 +7,6 @@
 		"moduleResolution": "bundler",
 		"strictNullChecks": true,
 		"allowSyntheticDefaultImports": true,
-		"lib": [
-			"DOM",
-			"ESNext"
-		]
-	},
+		"lib": ["DOM", "ESNext"]
+	}
 }
