--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Lint frontend
         run: |
-          cd plugin
+          cd frontend
           npm ci
           npm run lint
           if [[ $(git status --porcelain) ]]; then
@@ -59,6 +59,6 @@ jobs:
 
       - name: Test frontend
         run: |
-          cd plugin
+          cd frontend
           npm ci
           npm run test
