--- a/frontend/sync-client/package.json
+++ b/frontend/sync-client/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "sync-client",
-	"version": "1.0.0",
+	"version": "0.0.0",
+	"private": true,
 	"main": "dist/index.js",
 	"types": "dist/types/index.d.ts",
 	"scripts": {
