--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "jest.jestCommandLine": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest",
     "jest.rootPath": "plugin",
     "files.exclude": {
+        "**/dist": true,
         "**/node_modules": true
     }
 }
