--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ node_modules
 # Rust build folder
 backend/target
 
-frontend/obsidian-plugin/dist
-frontend/sync-client/dist
+frontend/*/dist
 
 backend/db.sqlite3*
 backend/config.yml
