--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -51,7 +51,7 @@ jobs:
           cd frontend
           npm ci
           npm run build
-          npm run lint || true  # ignore linting errors for now
+          npm run lint
           if [[ $(git status --porcelain) ]]; then
               git status --porcelain
               echo "Failing CI because the working directory is not clean after linting."
@@ -61,5 +61,4 @@ jobs:
       - name: Test frontend
         run: |
           cd frontend
-          npm ci
           npm run test
