--- a/frontend/obsidian-plugin/package.json
+++ b/frontend/obsidian-plugin/package.json
@@ -14,7 +14,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.13.4",
+		"@types/node": "^22.13.5",
 		"css-loader": "^7.1.2",
 		"date-fns": "^4.1.0",
 		"file-loader": "^6.2.0",
@@ -27,10 +27,11 @@
 		"sass-loader": "^16.0.5",
 		"sync-client": "file:../sync-client",
 		"terser-webpack-plugin": "^5.3.11",
-		"ts-jest": "^29.2.5",
+		"ts-jest": "^29.2.6",
 		"ts-loader": "^9.5.2",
 		"tslib": "2.8.1",
 		"typescript": "5.7.3",
+		"url": "^0.11.4",
 		"virtual-scroller": "^1.13.1",
 		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1"
