--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
 		"build": "npm run build --workspaces",
 		"dev": "concurrently --kill-others \"npm run dev -w sync-client\" \"npm run dev -w obsidian-plugin\"",
 		"test": "npm run test --workspaces",
-		"lint": "eslint --fix sync-client obsidian-plugin test-client; prettier --write \"**/*.(ts|scss|json|html)\"",
+		"lint": "eslint --fix sync-client obsidian-plugin test-client && prettier --write \"**/*.(ts|scss|json|html)\"",
 		"update": "ncu -u -ws"
 	},
 	"devDependencies": {
