--- a/frontend/sync-client/tsconfig.json
+++ b/frontend/sync-client/tsconfig.json
@@ -6,12 +6,7 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true,
-		"lib": [
-			"DOM",
-			"ESNext"
-		]
+		"lib": ["DOM", "ESNext"]
 	},
-	"exclude": [
-		"./dist"
-	]
+	"exclude": ["./dist"]
 }
