--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,11 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.2.0
+        with:
+          node-version: "22.x"
+          check-latest: true
+
+      - name: Setup rust
         run: |
-          rustup install nightly
-          rustup default nightly
-          rustup component add clippy rustfmt
           cargo install sqlx-cli
           cd backend
           sqlx database create --database-url sqlite://db.sqlite3
@@ -44,7 +47,7 @@ jobs:
           cd backend
           cargo test --verbose
           cd sync_lib
-          # wasm-pack test --node # todo: fix this in CI
+          wasm-pack test --node
 
       - name: Lint frontend
         run: |
