--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,6 @@ FROM rust:1.83 AS builder
 WORKDIR /usr/src/backend
 
 RUN apt update && apt install -y musl-tools
-RUN rustup install nightly && rustup default nightly
-RUN rustup target add x86_64-unknown-linux-musl
 RUN cargo install sqlx-cli
 
 COPY . .
@@ -23,7 +21,7 @@ RUN apk add --no-cache curl
 
 COPY --from=builder /usr/src/backend/target/x86_64-unknown-linux-musl/release/sync_server /app/sync_server
 
-VOLUME /data
+VOLUME /data/databases
 EXPOSE 3000/tcp
 
 WORKDIR /data
