--- a/frontend/sync-client/package.json
+++ b/frontend/sync-client/package.json
@@ -1,29 +1,36 @@
 {
 	"name": "sync-client",
-	"version": "0.0.0",
-	"private": true,
-	"main": "dist/index.js",
+	"version": "0.0.30",
+	"main": "dist/sync-client.node.js",
+	"browser": "dist/sync-client.web.js",
 	"types": "dist/types/index.d.ts",
+	"files": [
+		"dist/**/*"
+	],
 	"scripts": {
 		"dev": "webpack watch --mode development",
 		"build": "webpack --mode production",
 		"test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest"
 	},
+	"dependencies": {
+		"byte-base64": "^1.1.0",
+		"fetch-retry": "^6.0.0",
+		"openapi-fetch": "0.13.5",
+		"openapi-typescript": "7.6.1",
+		"p-queue": "^8.1.0",
+		"uuid": "^11.1.0"
+	},
 	"devDependencies": {
-		"tslib": "2.8.1",
-		"typescript": "5.7.3",
-		"sync_lib": "file:../../backend/sync_lib/pkg",
 		"@types/jest": "^29.5.14",
-		"@types/node": "^22.13.5",
+		"@types/node": "^22.13.10",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.2.6",
-		"p-queue": "^8.1.0",
-		"fetch-retry": "^6.0.0",
-		"byte-base64": "^1.1.0",
-		"openapi-fetch": "0.13.4",
-		"openapi-typescript": "7.6.1",
 		"ts-loader": "^9.5.2",
+		"tslib": "2.8.1",
+		"typescript": "5.8.2",
 		"webpack": "^5.98.0",
-		"webpack-cli": "^6.0.1"
+		"webpack-cli": "^6.0.1",
+		"webpack-merge": "^6.0.1",
+		"sync_lib": "file:../../backend/sync_lib/pkg"
 	}
 }
