--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Setup rust
         run: |
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.ref_type: ${{ github.ref_type }}"
+          echo "github.event_name: ${{ github.event_name }}"
           cargo install sqlx-cli
           cd backend
           sqlx database create --database-url sqlite://db.sqlite3
