--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -8,6 +8,7 @@ name: Publish server Docker image
 on:
   push:
     branches: ["master"]
+    tags: ["*"]
   pull_request:
     branches: ["master"]
 
