--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,6 +44,7 @@ jobs:
           scripts/update-api-types.sh
           cd frontend
           npm ci
+          npm run build
           npm run lint
           if [[ $(git status --porcelain) ]]; then
               git status --porcelain
