--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,9 +21,8 @@ RUN apk add --no-cache curl
 
 COPY --from=builder /usr/src/backend/target/x86_64-unknown-linux-musl/release/sync_server /app/sync_server
 
-VOLUME /data/databases
+VOLUME /data
 EXPOSE 3000/tcp
-
 WORKDIR /data
 
 HEALTHCHECK \
