--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -2,10 +2,10 @@ name: Publish server Docker image
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
     tags: ["*"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 env:
   # Use docker.io for Docker Hub if empty
