--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,7 +28,7 @@ jobs:
           cargo install sqlx-cli wasm-pack
           cd backend
           sqlx database create --database-url sqlite://db.sqlite3
-          sqlx migrate run --source sync_server/src/database/migrations --database-url sqlite://db.sqlite3
+          sqlx migrate run --source sync_server/src/app_state/database/migrations --database-url sqlite://db.sqlite3
 
       - name: Build wasm
         run: |
@@ -38,7 +38,7 @@ jobs:
       - name: E2E tests
         run: |
           cd backend
-          RUST_BACKTRACE=1 cargo run -p sync_server config-e2e.yml &
+          cargo run -p sync_server config-e2e.yml --color never &
           cd ..
 
           scripts/update-api-types.sh
