--- a/frontend/obsidian-plugin/tsconfig.json
+++ b/frontend/obsidian-plugin/tsconfig.json
@@ -6,7 +6,12 @@
 		"strict": true,
 		"moduleResolution": "bundler",
 		"allowSyntheticDefaultImports": true,
-		"lib": ["DOM", "ESNext"]
+		"lib": [
+			"DOM",
+			"ESNext"
+		]
 	},
-	"exclude": ["./dist"]
+	"exclude": [
+		"./dist"
+	]
 }
