--- a/frontend/sync-client/package.json
+++ b/frontend/sync-client/package.json
@@ -23,6 +23,7 @@
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
 		"jest": "^29.7.0",
+		"sync_lib": "file:../../backend/sync_lib/pkg",
 		"ts-jest": "^29.2.6",
 		"ts-loader": "^9.5.2",
 		"tslib": "2.8.1",
@@ -30,6 +31,6 @@
 		"webpack": "^5.98.0",
 		"webpack-cli": "^6.0.1",
 		"webpack-merge": "^6.0.1",
-		"sync_lib": "file:../../backend/sync_lib/pkg"
+		"ws": "^8.18.1"
 	}
 }
