Add cursor moving (#19)

--- a/frontend/obsidian-plugin/package.json
+++ b/frontend/obsidian-plugin/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "webpack watch --mode development",
 		"build": "webpack --mode production",
-		"test": "jest --passWithNoTests",
+		"test": "jest",
 		"version": "node version-bump.mjs"
 	},
 	"keywords": [],
