Hide sqlx folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "jest.rootPath": "plugin",
     "files.exclude": {
         "**/dist": true,
-        "**/node_modules": true
+        "**/node_modules": true,
+        "**/.sqlx": true,
     }
 }
