--- a/backend/sync_server/Cargo.toml
+++ b/backend/sync_server/Cargo.toml
@@ -36,6 +36,7 @@ clap = { version = "4.5.38", features = ["derive"] }
 futures = "0.3.31"
 serde_json = "1.0.140"
 clap-verbosity-flag = "3.0.3"
+bimap = "0.6.3"
 
 [lints]
 workspace = true
