--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,13 +25,11 @@ jobs:
 
       - name: Setup rust
         run: |
-          cargo install sqlx-cli wasm-pack cargo-machete
-          sqlx database create --database-url sqlite://db.sqlite3
-          sqlx migrate run --source sync_server/src/app_state/database/migrations --database-url sqlite://db.sqlite3
+          cargo install wasm-pack cargo-machete
 
       - name: Build wasm
         run: |
-          wasm-pack build --target web
+          wasm-pack build --target web --features wasm
 
       - name: Lint
         run: |
@@ -42,4 +40,4 @@ jobs:
       - name: Test
         run: |
           cargo test --verbose -- --include-ignored
-          wasm-pack test --node
+          wasm-pack test --node --features wasm
