--- a/tests/examples/replacing.yml
+++ b/tests/examples/replacing.yml
@@ -2,7 +2,7 @@
 parent: original_1 original_2 original_3
 left: original_1 edit_1| original_3
 right: original_1 original_2| edit_2
-expected: original_1 edit_1|| edit_2
+expected: original_1| edit_1| edit_2
 
 ---
 # Both replace the same token with the same value
