--- a/tests/examples/deletes.yml
+++ b/tests/examples/deletes.yml
@@ -28,7 +28,7 @@ expected: long small
 parent: long run of text where one barely has no changes but has cursors
 left: long| run of tex|t where one barely has no |changes but has |cursors
 right: long run one barely has no changes cursors
-expected: long| run| one barely has no |changes |cursors
+expected: long| ru|n one barely has no |changes |cursors
 
 ---
 parent: long text where the cursor has to be clamped after delete
