--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,12 +41,12 @@ lto = true
 opt-level = 3
 strip="debuginfo"  # Keep some info for better panics
 
-[workspace.lints.rust]
+[lints.rust]
 unsafe_code = "forbid"
 rust_2018_idioms = { level = "warn", priority = -1 }
 missing_debug_implementations = "warn"
 
-[workspace.lints.clippy]
+[lints.clippy]
 await_holding_lock = "warn"
 dbg_macro = "warn"
 empty_enum = "warn"
