--- a/reconcile-js/tsconfig.json
+++ b/reconcile-js/tsconfig.json
@@ -4,9 +4,14 @@
 		"target": "ESNext",
 		"strict": true,
 		"allowSyntheticDefaultImports": true,
+    	"esModuleInterop": true,
 		"moduleResolution": "bundler",
 		"declaration": true,
-		"declarationDir": "./dist/types"
+		"declarationDir": "./dist/types",
+		"outDir": "./dist",
+		"rootDir": "./src",
+		"skipLibCheck": true,
+		"inlineSourceMap": true
 	},
 	"exclude": [
 		"./dist"
