--- a/examples/website/tsconfig.json
+++ b/examples/website/tsconfig.json
@@ -1,19 +1,17 @@
 {
-	"compilerOptions": {
-		"module": "ESNext",
-		"target": "ESNext",
-		"strict": true,
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"moduleResolution": "bundler",
-		"declaration": true,
-		"declarationDir": "./dist/types",
-		"outDir": "./dist",
-		"rootDir": ".",
-		"skipLibCheck": true,
-		"inlineSourceMap": true
-	},
-	"exclude": [
-		"./dist"
-	]
+  "compilerOptions": {
+    "module": "ESNext",
+    "target": "ESNext",
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "moduleResolution": "bundler",
+    "declaration": true,
+    "declarationDir": "./dist/types",
+    "outDir": "./dist",
+    "rootDir": ".",
+    "skipLibCheck": true,
+    "inlineSourceMap": true
+  },
+  "exclude": ["./dist"]
 }
